--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ main, develop ]
 
+permissions:
+  contents: read
+  statuses: write
+
 jobs:
   test:
     name: Test
@@ -97,7 +101,7 @@ jobs:
         fi
 
   build:
-    name: Build
+    name: Build (${{ matrix.os }}, ${{ matrix.go-version }})
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -122,6 +126,52 @@ jobs:
         name: axon-${{ matrix.os }}
         path: axon
         if-no-files-found: error
+
+  build-status:
+    name: Build Status
+    needs: build
+    runs-on: ubuntu-latest
+    if: always()
+    permissions:
+      contents: read
+      statuses: write
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Report Build Status
+      uses: actions/github-script@v7
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          // For matrix jobs, check if the overall job succeeded
+          // If any matrix job failed, needs.build.result will be 'failure'
+          const buildResult = '${{ needs.build.result }}';
+          const status = buildResult === 'success' ? 'success' : 'failure';
+          const description = status === 'success' 
+            ? 'All builds completed successfully' 
+            : 'One or more builds failed';
+          
+          try {
+            await github.rest.repos.createCommitStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              sha: context.sha,
+              state: status,
+              context: 'Build',
+              description: description,
+              target_url: `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`
+            });
+            console.log(`✅ Build status reported: ${status}`);
+          } catch (error) {
+            console.error('⚠️  Failed to create commit status:', error.message);
+            // Don't fail the job if status creation fails
+            if (error.status !== 403) {
+              throw error;
+            }
+            console.log('⚠️  Status creation requires statuses:write permission');
+          }
 
   security:
     name: Security Scan
