--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -23,6 +23,9 @@ jobs:
         go-version: '1.21'
         cache-dependency-path: go.sum
     
+    - name: Verify Go version
+      run: go version
+    
     - name: Download dependencies
       run: go mod download
     
@@ -41,7 +44,7 @@ jobs:
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v6
       with:
-        version: latest
+        version: v1.64.8
         args: --timeout=5m
     
     - name: Run tests
