fix: Use VERSION env var in Create archive step
The VERSION environment variable was not being passed to the Create archive step,
causing release assets to be named incorrectly (axon___.tar.gz instead of axon_1.1.0_...tar.gz).

This ensures the VERSION from get_version step is available in the Create archive step.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,6 +55,7 @@ jobs:
         env:
           GOOS: ${{ matrix.goos }}
           GOARCH: ${{ matrix.goarch }}
+          VERSION: ${{ steps.get_version.outputs.version }}
         run: |
           ARCHIVE_NAME="axon_${VERSION}_${GOOS}_${GOARCH}.tar.gz"
           cd build
