ci: Add Docker converter image build/publish and E2E tests
- Add GitHub Actions workflow to build and publish Docker converter image
- Add E2E test workflow for Docker converter integration
- Fix Dockerfile to copy conversion scripts
- Image published to ghcr.io/mlOS-foundation/axon-converter

This makes the Docker-based conversion feature fully autonomous and turnkey.

--- a/docker/Dockerfile.converter
+++ b/docker/Dockerfile.converter
@@ -33,8 +33,11 @@ RUN pip install --no-cache-dir --upgrade pip && \
 # Create conversion scripts directory
 WORKDIR /axon/scripts
 
-# Copy conversion scripts (will be added in implementation)
-# COPY scripts/conversion/ .
+# Copy conversion scripts
+COPY scripts/conversion/ /axon/scripts/
+
+# Make scripts executable
+RUN chmod +x /axon/scripts/*.py
 
 # Set working directory for model conversion
 WORKDIR /axon/cache
