fix: Override Docker entrypoint in test commands
The Dockerfile sets ENTRYPOINT ["python3"], which causes test commands
like 'docker run image python3 --version' to fail because Docker tries
to execute 'python3 python3 --version'.

Fix by adding --entrypoint="" to all test docker run commands in:
- e2e-docker-converter.yml workflow
- docker-converter.yml workflow
- Makefile docker-test-converter target

This allows testing while preserving the entrypoint for actual usage
in docker.go where scripts are called directly.

--- a/.github/workflows/docker-converter.yml
+++ b/.github/workflows/docker-converter.yml
@@ -71,14 +71,14 @@ jobs:
       - name: Test Docker image
         if: github.event_name != 'pull_request'
         run: |
-          # Test that the image works and has all dependencies
+          # Test that the image works and has all dependencies (override entrypoint for testing)
           IMAGE_TAG="ghcr.io/mlOS-foundation/axon-converter:latest"
-          docker run --rm $IMAGE_TAG python3 --version
-          docker run --rm $IMAGE_TAG python3 -c "import torch; print('PyTorch:', torch.__version__)"
-          docker run --rm $IMAGE_TAG python3 -c "import transformers; print('Transformers:', transformers.__version__)"
-          docker run --rm $IMAGE_TAG python3 -c "import tensorflow as tf; print('TensorFlow:', tf.__version__)"
-          docker run --rm $IMAGE_TAG python3 -c "import onnx; print('ONNX:', onnx.__version__)"
-          docker run --rm $IMAGE_TAG test -f /axon/scripts/convert_huggingface.py && echo "✅ Conversion scripts present"
+          docker run --rm --entrypoint="" $IMAGE_TAG python3 --version
+          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import torch; print('PyTorch:', torch.__version__)"
+          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import transformers; print('Transformers:', transformers.__version__)"
+          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import tensorflow as tf; print('TensorFlow:', tf.__version__)"
+          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import onnx; print('ONNX:', onnx.__version__)"
+          docker run --rm --entrypoint="" $IMAGE_TAG test -f /axon/scripts/convert_huggingface.py && echo "✅ Conversion scripts present"
           echo "✅ All dependencies verified"
 
       - name: Image digest
