chore: Update Dockerfile metadata to trigger image build
- Added additional metadata labels
- This will trigger the Docker image build workflow on merge

--- a/docker/Dockerfile.converter
+++ b/docker/Dockerfile.converter
@@ -50,4 +50,6 @@ LABEL org.opencontainers.image.title="Axon ONNX Converter"
 LABEL org.opencontainers.image.description="Docker image for ONNX model conversion with all ML frameworks"
 LABEL org.opencontainers.image.version="1.0.0"
 LABEL org.opencontainers.image.source="https://github.com/mlOS-foundation/axon"
+LABEL org.opencontainers.image.url="https://github.com/mlOS-foundation/axon"
+LABEL org.opencontainers.image.vendor="mlOS Foundation"
 
