fix: Use locally built image for testing in Docker workflow
- Test step now uses locally built image instead of pulling from registry
- This fixes workflow failures where test step couldn't find the image
- Added local validation scripts for testing workflow changes
- Quick validation script for fast checks
- Full validation script for complete testing

--- a/.github/workflows/docker-converter.yml
+++ b/.github/workflows/docker-converter.yml
@@ -69,10 +69,13 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: Test Docker image
-        if: github.event_name != 'pull_request'
         run: |
           # Test that the image works and has all dependencies (override entrypoint for testing)
-          IMAGE_TAG="ghcr.io/mlos-foundation/axon-converter:latest"
+          # Use the locally built image from the build step
+          IMAGE_TAG="${{ steps.meta.outputs.tags }}"
+          # Extract first tag (comma-separated list)
+          IMAGE_TAG=$(echo $IMAGE_TAG | cut -d',' -f1)
+          echo "Testing image: $IMAGE_TAG"
           docker run --rm --entrypoint="" $IMAGE_TAG python3 --version
           docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import torch; print('PyTorch:', torch.__version__)"
           docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import transformers; print('Transformers:', transformers.__version__)"
