fix: Fix YAML syntax error on line 89 in docker-converter workflow
- Changed single-line run to multi-line format
- GitHub Actions YAML parser requires multi-line format for run commands with ${{ }} expressions
- Fixes 'mapping values are not allowed here' error
- Validated with Python yaml parser

--- a/.github/workflows/docker-converter.yml
+++ b/.github/workflows/docker-converter.yml
@@ -86,4 +86,5 @@ jobs:
 
       - name: Image digest
         if: github.event_name != 'pull_request'
-        run: echo "Image digest: ${{ steps.build.outputs.digest }}"
+        run: |
+          echo "Image digest: ${{ steps.build.outputs.digest }}"
