--- a/.github/workflows/docker-converter.yml
+++ b/.github/workflows/docker-converter.yml
@@ -1,18 +1,8 @@
 name: Build and Publish Docker Converter Image
 
 on:
-  push:
-    branches: [ main ]
-    paths:
-      - 'docker/Dockerfile.converter'
-      - 'scripts/conversion/**'
-      - '.github/workflows/docker-converter.yml'
-  pull_request:
-    branches: [ main ]
-    paths:
-      - 'docker/Dockerfile.converter'
-      - 'scripts/conversion/**'
-      - '.github/workflows/docker-converter.yml'
+  release:
+    types: [ published, created ]
   workflow_dispatch:
     inputs:
       version:
@@ -35,7 +25,6 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to GitHub Container Registry
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -48,11 +37,9 @@ jobs:
         with:
           images: ghcr.io/mlos-foundation/axon-converter
           tags: |
-            type=ref,event=branch
-            type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=latest,enable=${{ github.event.action == 'published' }}
             type=raw,value=${{ github.event.inputs.version }},enable=${{ github.event.inputs.version != '' }}
 
       - name: Build and push Docker image
@@ -62,7 +49,7 @@ jobs:
           context: .
           file: ./docker/Dockerfile.converter
           platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
@@ -85,5 +72,5 @@ jobs:
           echo "✅ All dependencies verified"
 
       - name: Image digest
-        if: github.event_name != 'pull_request'
-        run: echo "Image digest: ${{ steps.build.outputs.digest }}"
+        run: |
+          echo "Image digest: ${{ steps.build.outputs.digest }}"
