--- a/.github/workflows/docker-converter.yml
+++ b/.github/workflows/docker-converter.yml
@@ -2,7 +2,7 @@ name: Build and Publish Docker Converter Image
 
 on:
   release:
-    types: [ published, created ]
+    types: [ published ]
   workflow_dispatch:
     inputs:
       version:
