--- a/docker/Dockerfile.converter
+++ b/docker/Dockerfile.converter
@@ -23,6 +23,8 @@ RUN --mount=type=cache,target=/root/.cache/pip \
     torch>=2.0.0 \
     transformers>=4.30.0 \
     # TensorFlow ecosystem (for TensorFlow Hub)
+    # Note: TensorFlow 2.13+ requires protobuf < 4.21, so install compatible protobuf first
+    "protobuf<4.21,>=3.20" \
     tensorflow>=2.13.0 \
     tf2onnx>=1.15.0 \
     # ModelScope (for ModelScope repository)
@@ -31,8 +33,7 @@ RUN --mount=type=cache,target=/root/.cache/pip \
     onnx>=1.14.0 \
     onnxruntime>=1.18.0 \
     # Utilities
-    numpy>=1.24.0 \
-    protobuf>=4.21.0 && \
+    numpy>=1.24.0 && \
     # Clean pip cache after installation to reduce image size
     pip cache purge || true
 
